Bug 256473 - Themes will not update
Summary: Themes will not update
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: knewstuff (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-09 21:16 UTC by Todd
Modified: 2011-03-29 18:40 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Todd 2010-11-09 21:16:06 UTC
Version:           unspecified (using KDE 4.5.3) 
OS:                Linux

I cannot update themes in the Desktop Theme Get New Themes interface, or the updates are not being remembered.  I can't tell which

Reproducible: Always

Steps to Reproduce:
1. Open systemsettings -> workspace appearance -> desktop themes
2. Click "Get New Themes"
3. Find a theme that has an update available for it
4. Click the "Update" button
5. Wait until the download finishes and the "Update" button changes to "Uninstall"
6. Click "Close"
7. Click "Get New Themes"

Actual Results:  
The theme that was supposedly just updated has the "Update" button again.

Expected Results:  
The theme that was just updated shows "Uninstall"

I can still install new themes just fine.

This seems to be happening with Aurorae as well but I can't find where to submit bugs for it.
Comment 1 Todd 2010-12-17 18:57:38 UTC
This is still a problem in 4.6 beta 2.
Comment 2 Thomas Tanghus 2010-12-30 09:50:51 UTC
On 4.6 RC1 the themes you install aren't available after installation.
Comment 3 Todd 2011-01-15 20:33:16 UTC
This is still a problem in 4.6 RC 1.
Comment 4 Matthias Fuchs 2011-03-29 18:35:12 UTC
Git commit 5627f9a9d2bcc84a83d4b9415796889f9758ff39 by Matthias Fuchs.
Committed on 27/03/2011 at 17:35.
Pushed by mfuchs into branch 'master'.

KNS3 correctly stores updated entries as installed.

* AtticaProvider also changes the cachedEntry in (!) the cache and it does that for Installed and for Updateable entries.
The later is important, since sometimes updates are not done.
* Installation only stores updateReleaseDate if it is valid.

BUG:256473
REVIEW:100958

M  +2    -2    knewstuff/knewstuff3/attica/atticaprovider.cpp     
M  +1    -1    knewstuff/knewstuff3/core/installation.cpp     

http://commits.kde.org/kdelibs/5627f9a9d2bcc84a83d4b9415796889f9758ff39
Comment 5 Matthias Fuchs 2011-03-29 18:40:45 UTC
Git commit b18b43d9c904a2ba794ac5802045294a23e35e69 by Matthias Fuchs.
Committed on 27/03/2011 at 17:35.
Pushed by mfuchs into branch 'KDE/4.6'.

KNS3 correctly stores updated entries as installed.

* AtticaProvider also changes the cachedEntry in (!) the cache and it does that for Installed and for Updateable entries.
The later is important, since sometimes updates are not done.
* Installation only stores updateReleaseDate if it is valid.

CCBUG:256473
FIXED-IN:4.6.2
(cherry picked from commit 5627f9a9d2bcc84a83d4b9415796889f9758ff39)

M  +2    -2    knewstuff/knewstuff3/attica/atticaprovider.cpp     
M  +1    -1    knewstuff/knewstuff3/core/installation.cpp     

http://commits.kde.org/kdelibs/b18b43d9c904a2ba794ac5802045294a23e35e69