KNS3 correctly stores updated entries as installed.

* AtticaProvider also changes the cachedEntry in (!) the cache and it does that for Installed and for Updateable entries.
The later is important, since sometimes updates are not done.
* Installation only stores updateReleaseDate if it is valid.

BUG:256473
REVIEW:100958